# patpatScreen

./: CMakeLists.txt  Makefile  README.md  main  main.c  patpat_screen
func/: memo.c  memo.h  weather.c  weather.h
lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h  RPI_gpiod.c  RPI_gpiod.h  dev_hardware_SPI.c  dev_hardware_i2c.c  dev_hardware_i2c.h
lib/Driver/: ICNT86X.c  ICNT86X.h
lib/EPD/: EPD_2in9_V2.c  EPD_2in9_V2.h
lib/GUI/: GUI_Paint.c  GUI_Paint.h
